fixes 'svg is too big' logic

--- a/demo/src/style.css
+++ b/demo/src/style.css
@@ -1,5 +1,6 @@
 .flex-container {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .flex-container > div {
@@ -7,3 +8,7 @@
     background-color: white;
 }
 
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
